allow mock multiple requests